...
  final TextEditingController _usernameController = TextEditingController();
  final TextEditingController _emailController = TextEditingController();
  final TextEditingController _passwordController = TextEditingController();

  bool hidePassword = true;

  String role = "Student";
  final List<String> roles = ["Student", "Company"];

  @override
  void dispose() {
    _usernameController.dispose();
    _emailController.dispose();
...
                            ),
                          ),
                          const SizedBox(height: 16),
                          const LabeledText(label: "Username"),
                          const SizedBox(height: 10),
                          CustomTextField(
                            key: const Key('usernameField'),
                            hintText: 'Enter your username',
                            controller: _usernameController,
                            obscureText: false,
                            onChanged: viewModel.setUsername,
                            suffixIcon: null,
                            validator: (value) {
...
                            },
                          ),
                          const SizedBox(height: 14),
                          const LabeledText(label: "Email"),
                          const SizedBox(height: 10),
                          CustomTextField(
                            key: const Key('emailField'),
                            hintText: 'Enter your email@gmail.com',
                            controller: _emailController,
                            keyboardType: TextInputType.emailAddress,
                            obscureText: false,
                            onChanged: viewModel.setEmail,
                            suffixIcon: null,
...
                            },
                          ),
                          const SizedBox(height: 14),
                          const LabeledText(label: "Password"),
                          const SizedBox(height: 10),
                          CustomTextField(
                            key: const Key('passwordField'),
                            hintText: 'Enter your password',
                            controller: _passwordController,
                            obscureText: hidePassword,
                            onChanged: viewModel.setPassword,
                            suffixIcon: IconButton(
                              onPressed: () {
...
                            },
                          ),
                          const SizedBox(height: 14),
                          const LabeledText(label: "Sign up As "),
                          const SizedBox(height: 10),
                          CustomDropdown(
                            key: const Key('roleDropdown'),
                            value: role,
                            items: roles,
                            onChanged: (value) {
                              setState(() {
                                role = value!;
                                viewModel.setRole(role);
                              });
                            },
                          ),
                          const SizedBox(height: 16),
                          ElevatedButton(
                            key: const Key('signUpButton'),
                            style: ButtonStyle(
                              backgroundColor:
                              MaterialStateProperty.all<Color>(
                                  const Color(0xFF012E65)),
                              shape: MaterialStateProperty.all<
                                  RoundedRectangleBorder>(
...
