...
          onChanged: (String? newValue) {
            widget.degreeController.text = newValue ?? '';
          },
        ),
        const SizedBox(height: 20),
        InstitutionAutocomplete(
            key: const Key('institutionField'),
            controller: widget.institutionController),
        const SizedBox(height: 20),

        CustomTextField(
          key: const Key('specialityEducationField'),
          controller: widget.specialitController,
...
