...
                              const SizedBox(width:2),
                              TextButton(
                                onPressed: () {
                                  Navigator.pushNamed(context, '/signup');
                                },
                                child: const Text(
                                  'Sign Up Now',
                                  style: TextStyle(
                                    color: Color(0xFF012E65),
                                    fontSize: 18,
                                    fontWeight:  FontWeight.bold,
                                    fontFamily: 'Roboto Slab',
                                  ),
...
